--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="js/rock.js"></script>
     <script type="text/javascript" src="js/moles.js"></script>
     <script type="text/javascript" src="js/fuelcans.js"></script>
+    <script type="text/javascript" src="js/blood.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
