Added sounds, leaderboard and some score container adjustments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="start-button">GO!</button>
         <p>The goal is to mown as many moles as you can without running out of fuel.</p>
         <p>Use <strong>UP</strong> and <strong>DOWN</strong> arrows to control the machine!</p>
+        <button id="audio-button"><img src="./images/audio.png" alt="speaker icon"></button>
       </div>
 
       <div id="game-container">
@@ -43,7 +44,13 @@
         <h1>Game Over</h1>
         <img src="./images/mawn-lower-2.png" alt="" class="logo-img" />
         <button id="restart-button">Restart</button>
-        <p>Seems like you need to practice more.</p>
+        <h2>Your score: <span id="your-score"></span></h2>
+        <h2>Leaderboard</h2>
+        <ul>
+          <li id="top1">Xxxxxxx</li>
+          <li id="top2">Yyyyyyy</li>
+          <li id="top3">Zzzzzzz</li>
+        </ul>
       </div>
     </main>
 
