--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div id="game-end">
-        <h1>Game Over</h1>
+        <h1 id="game-end-message">Game Over</h1>
         <img src="./images/mawn-lower-2.png" alt="" class="logo-img" />
         <button id="restart-button">Restart</button>
         <h2>Your score: <span id="your-score"></span></h2>
