--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <h1>The Mawn Lower</h1>
         <img src="./images/mawn-lower-2.png" alt="" class="logo-img" />
         <button id="start-button">GO!</button>
+
+        <div id="input-popup">
+          <div id="popup-frame">
+              <h3>Enter Your Name</h3>
+              <div id="input-container">
+                  <input type="text" id="input-name"/>
+                  <div id="input-button-container">
+                      <button type="button" id="input-ok-button">OK</button>
+                      <button type="button" id="input-back-button">BACK</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+
         <p>The goal is to mown as many moles as you can without running out of fuel.</p>
         <p>Use <strong>UP</strong> and <strong>DOWN</strong> arrows to control the machine!</p>
         <button id="audio-button"><img src="./images/audio.png" alt="speaker icon"></button>
@@ -45,12 +59,14 @@
         <img src="./images/mawn-lower-2.png" alt="" class="logo-img" />
         <button id="restart-button">Restart</button>
         <h2>Your score: <span id="your-score"></span></h2>
-        <h2>Leaderboard</h2>
+        <div id="leaderboard-container">
+          <h2>Leaderboard</h2>
         <ul>
           <li id="top1">Xxxxxxx</li>
           <li id="top2">Yyyyyyy</li>
           <li id="top3">Zzzzzzz</li>
         </ul>
+        </div>
       </div>
     </main>
 
