Ready for presentation + music and fx buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>The Mawn Lower</title>
+    <link rel="icon" type="image/x-icon" href="/images/mawn-lower-2.png">
   </head>
   <body>
     <main>
@@ -13,6 +14,10 @@
         <h1>The Mawn Lower</h1>
         <img src="./images/mawn-lower-2.png" alt="" class="logo-img" />
         <button id="start-button">GO!</button>
+        <div id="audio-button-container">
+          <button type="button" id="music-button" class="audio-button audio-button-on">Music</button>
+          <button type="button" id="fx-button" class="audio-button audio-button-on">Sound FX</button>
+        </div>
 
         <div id="input-popup">
           <div id="popup-frame">
@@ -29,7 +34,9 @@
 
         <p>The goal is to mown as many moles as you can without running out of fuel.</p>
         <p>Use <strong>UP</strong> and <strong>DOWN</strong> arrows to control the machine!</p>
-        <button id="audio-button"><img src="./images/audio.png" alt="speaker icon"></button>
+        
+        
+        <!-- <button id="audio-button"><img id="audio-button-icon" src="./images/speaker-mine-off.png" alt="speaker icon"></button> -->
       </div>
 
       <div id="game-container">
